--- a/static/login.html
+++ b/static/login.html
@@ -12,7 +12,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">Protocol Services</a>
+      <a href="/" class="navbar-brand">Communication Protocol Services</a>
     </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
