Pasando información a de la antigua página.

--- a/static/index.html
+++ b/static/index.html
@@ -85,8 +85,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">¡Bienvenidos!</div>
-                <div class="intro-heading">Bla bla bla.</div>
+                <div class="intro-lead-in">Comunicación corporativa y protocolo empresarial.</div>
+                <div class="intro-heading"><img src="/img/logos/logo.png" /></div>
                 <a href="#services" class="page-scroll btn btn-xl">Más información...</a>
             </div>
         </div>
@@ -99,7 +99,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Servicios</h2>
                     <h3 class="section-subheading text-muted">
-		    			Muchas ventajas para nuestros clientes.
+		    			Asesoría y formación para empresas e instituciones públicas en el ámbito de la comunicación, el protocolo y la imagen personal.
 		    		</h3>
                 </div>
             </div>
@@ -110,10 +110,7 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Protocolo.</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet,
-                    consectetur adipisicing elit. Minima maxime quam
-                    architecto quo inventore harum ex magni, dicta
-                    impedit.</p>
+                    <p class="text-muted">Les asesoramos sobre las normas de protocolo y cortesía empresarial que han de observarse en las transacciones comerciales con interlocutores de otras culturas, tanto si estos visitan nuestro país como si es usted el desplazado.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -121,25 +118,19 @@
                         <i class="fa fa-female fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Imagen personal.</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet,
-                    consectetur adipisicing elit. Minima maxime quam
-                    architecto quo inventore harum ex magni, dicta
-                    impedit.</p>
+                    <p class="text-muted">Diseñamos y establecemos códigos de apariencia en consonancia con la identidad e imagen que su empresa desea proyectar. Contar con un manual de conducta empresarial adaptado a su sector y a sus necesidades supondrá un elemento diferenciador clave a la hora de alcanzar el reconocimiento y prestigio tanto profesional como social.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-institution fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Consultas personalizadas.</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet,
-                    consectetur adipisicing elit. Minima maxime quam
-                    architecto quo inventore harum ex magni, dicta
-                    impedit.</p>
+                    <h4 class="service-heading">Organización de eventos.</h4>
+                    <p class="text-muted">Servicios externos para la correcta planificación de todo tipo de eventos, incluyendo la proyección de su imagen: inauguraciones, celebraciones, ruedas de prensa, fiestas, imagen institucional, asesoramiento en la etiqueta social de los ejecutivos.</p>
                 </div>
 		<a href="/app/home" 
 			class="btn btn-xl">
-			Ir a la zona de clientes
+			Plataforma de E-learning.
 		</a>
             </div>
         </div>
@@ -151,7 +142,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Recursos</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">El éxito y la exclusividad de la formación que impartimos radica en nuestros programas, en la adaptación de la materia a determinados perfiles profesionales que tienen un trato directo con el cliente y en un plan de estudios concebido al primordial servicio del empresario actual.</h3>
                 </div>
             </div>
             <div class="row">
@@ -166,7 +157,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Cursos</h4>
-                        <p class="text-muted">Bla bla bla</p>
+                        <p class="text-muted">Cursos presenciales y semipresenciales.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -180,7 +171,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Libros</h4>
-                        <p class="text-muted">Bla bla bla</p>
+                        <p class="text-muted">De la directora Carmen Cuadrado.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -193,8 +184,8 @@
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Informes</h4>
-                        <p class="text-muted">Bla bla bla</p>
+                        <h4>E-learning</h4>
+                        <p class="text-muted">Plataforma avanzada para cursos online.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -207,8 +198,8 @@
                         <img src="img/portfolio/golden.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Mulitimedia</h4>
-                        <p class="text-muted">Bla bla bla</p>
+                        <h4>Consultoría</h4>
+                        <p class="text-muted">Asesoría en protocolo y cortesía empresarial.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -221,8 +212,8 @@
                         <img src="img/portfolio/escape.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Consultoría</h4>
-                        <p class="text-muted">Bla bla bla</p>
+                        <h4>Manuales</h4>
+                        <p class="text-muted">Pautas de conducta</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -236,7 +227,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Divulgación</h4>
-                        <p class="text-muted">Bla bla bla</p>
+                        <p class="text-muted">Visita nuestro blog.</p>
                     </div>
                 </div>
             </div>
@@ -249,7 +240,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Sobre nosotros.</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">Communication & Protocol Services, S.L. es una empresa con una larga trayectoria en el ámbito del protocolo y la comunicación, catorce años de experiencia en el sector avalan nuestro compromiso y nuestra entera dedicación a nuestros clientes.</h3>
           </div>
         </div>
         <div class="row">
