--- a/static/app.html
+++ b/static/app.html
@@ -114,17 +114,56 @@
 	    {% raw %}
 	    <div class="container">
 	      <ol class="breadcrumb">
-	        <li><a href="/app/{{ home }}"><i class="fa fa-home"></i></a></li>
+	        <li>
+		  Navegación: &nbsp; <a href="/app/{{ home }}"><i class="fa
+		  fa-home"></i></a>
+		</li>
 	        <li ng-repeat="b in breadcrumbs">
 	  	  <a href="/app/{{ b }}">{{ b }}</a>
 	        </li>
 	      </ol>
 	    </div>
 	    {% endraw %}
+	    <nav>
+	      <ul class="pager">
+		{% if page.prev %}
+		<li class="previous">
+		  <a href="/app/{{ page.prev }}">
+		    <span aria-hidden="true">&larr;</span> Anterior
+		  </a>
+		</li>
+		{% endif %}
+		{% if page.next %}
+		<li class="next">
+		  <a href="/app/{{ page.next }}">
+		    Siguiente <span aria-hidden="true">&rarr;</span>
+		  </a>
+		</li>
+		{% endif %}
+	      </ul>
+	    </nav>
 	    <div class="text-center">
               <h2>{{ page.title }}</h2>
 	    </div>
 	    {{ text|safe }}
+	    <nav>
+	      <ul class="pager">
+		{% if page.prev %}
+		<li class="previous">
+		  <a href="/app/{{ page.prev }}">
+		    <span aria-hidden="true">&larr;</span> Anterior
+		  </a>
+		</li>
+		{% endif %}
+		{% if page.next %}
+		<li class="next">
+		  <a href="/app/{{ page.next }}">
+		    Siguiente <span aria-hidden="true">&rarr;</span>
+		  </a>
+		</li>
+	      {% endif %}
+	      </ul>
+	    </nav>
 	  </div>
 	</div>
       </div>
