--- a/static/content.html
+++ b/static/content.html
@@ -39,8 +39,10 @@
     <div class="container" style="margin-top:100px;">
       <div class="row">
         <div class="col-md-12" style="margin-bottom:20px;">
-	  <div class="well">
-	    <h4>Páginas de inicio</h4>
+	  <h4>Cursos disponibles
+	    (Ver: <input type="checkbox" ng-model="courses">)
+	  </h4>
+	  <div class="well" ng-show="courses">
 	    <ul>
 	      {% for s in startpages %}
 	      <li><a href="/content/{{ s }}">
@@ -49,14 +51,9 @@
 	      {% endfor %}
 	    </ul>
 	  </div>
-	  <h2>{{ title }}</h2>
-	  {{ text|safe }}
-        </div>
-	<div class="container">
-	  <div class="well">
-	    <div class="text-center">
-	      <h1>Editar</h1>
-	    </div>
+	  <h4>Editar esta página (Ver: <input type="checkbox"
+	  ng-model="edit"></input>)</h4>
+	  <div class="well" ng-show="edit">
 	    <form action="/content/{{ slug }}" method="post" id="form" role="form">
 	      <input type="text" name="slug" value="{{ slug }}" hidden><br>
 	      <div class="form-group">
@@ -77,11 +74,27 @@
 		    Público</option>
 		</select>
  	      </div>
+	      <div class="form-group">
+		<label>Página anterior (opcional):</label>
+		<input 
+		   type="text" 
+		   name="prev"
+		   value="{{ prev }}">
+	      </div>
+	      <div class="form-group">
+		<label>Página siguiente (opcional):</label>
+		<input 
+		   type="text" 
+		   name="next"
+		   value="{{ next }}">
+	      </div>
 	      <textarea name="text" form="form">{{ edit }}</textarea><br>
 	      <input type="submit" value="Aceptar">
 	    </form>
 	  </div>
-	</div>
+	  <h2>{{ title }}</h2>
+	  {{ text|safe }}
+        </div>
       </div>
     </div>
     {% endblock %}
