--- a/static/content.html
+++ b/static/content.html
@@ -84,6 +84,7 @@
 		<input 
 		   type="text"
 		   name="doc"
+		   class="form-control"
 		   value="{{ doc }}">
 	      </div>
 	      <div class="form-group"
@@ -94,6 +95,7 @@
 		<input 
 		   type="text" 
 		   name="prev"
+		   class="form-control"
 		   value="{{ prev }}">
 	      </div>
 	      <div class="form-group"
@@ -104,6 +106,7 @@
 		<input 
 		   type="text" 
 		   name="next"
+		   class="form-control"
 		   value="{{ next }}">
 	      </div>
 	      <textarea name="text" form="form">{{ edit }}</textarea><br>
